fix dasher misalignment

--- a/ui/common/css/header/_buttons.scss
+++ b/ui/common/css/header/_buttons.scss
@@ -51,6 +51,9 @@
     display: none;
     position: absolute;
     #{$end-direction}: 0;
+    @media (min-width: 1780px) {
+      #{$end-direction}: var(--header-side-padding);
+    }
     top: var(--dropdown-top);
     background: $c-bg-header-dropdown;
     z-index: z('dropdown');
